cmake_minimum_required(VERSION 3.15)
project(9c C)

set(CMAKE_C_STANDARD 11)

#add_executable(9c chap01/main.c)
#add_executable(9c chap03/main.c)
#add_executable(9c chap05/main.c)
#add_executable(9c chap06/main.c)
#add_executable(9c chap07/main.c)
#add_executable(9c chap08/main.c)
#add_executable(9c chap09/main.c)
#add_executable(9c chap10/main.c)
#add_executable(9c chap11/main.c)
#add_executable(9c chap13/main.c)
#add_executable(9c chap14/main.c)
#add_executable(9c chap15/main.c)
#add_executable(9c chap16/main.c)
#add_executable(9c chap17/main.c)
#add_executable(9c chap18/main.c)
#add_executable(9c chap19/main.c)
add_executable(9c chap20/main.c chap20/sum.c)
